# lex

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md  seed_cases_v1.csv
docs/plans/: 2026-04-13-lexai-design.md  2026-04-13-lexai-master-plan.md  2026-04-13-lexai-phase1-derisk.md
evals/: grade.py  rubric.md
evals/problems/: README.md
fixtures/moots/: README.md
scripts/: ingest_corpus.py  init_index.py  scrape_seed.py
src/lexai/: __init__.py  cli.py
src/lexai/ingest/: chunk.py  pdf.py  scraper.py
src/lexai/pipeline/: arguments.py  issues.py  memorial.py  orchestrator.py  research.py  validate.py
src/lexai/prompts/: arguments.py  issues.py  rerank.py
src/lexai/rag/: embed.py  vectorstore.py
src/lexai/web/: app.py  index.html
tests/: conftest.py
tests/ingest/: test_chunk.py  test_pdf.py  test_scraper.py
tests/pipeline/: test_arguments.py  test_issues.py  test_memorial.py  test_research.py  test_validate.py
tests/rag/: test_embed.py  test_vectorstore.py
